--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 __pycache__/
+DB_files/names.dmp
+DB_files/nodes.dmp
+DB_files/prot.accession2taxid.FULL.gz
+DB_files/prot.accession2taxid.FULL.gz.md5
