--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ DB_files/names.dmp
 DB_files/nodes.dmp
 DB_files/prot.accession2taxid.FULL.gz
 DB_files/prot.accession2taxid.FULL.gz.md5
+
+example/example_MSA
+example/results
+example_MSA_grouping.txt
